--- a/Medalhas/style.css
+++ b/Medalhas/style.css
@@ -10,7 +10,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f5f5f5;
+    background-color: #272727;
 }
 
 /* Estilo do cabeçalho */
@@ -18,7 +18,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: white;
+    background-color: #3b3b3b;
     padding: 20px;
     position: relative;
 }
