--- a/home/styles.css
+++ b/home/styles.css
@@ -21,9 +21,7 @@ header {
     z-index: 1000;
 }
 
-.logo img {
-    height: 60px;
-}
+
 
 nav ul {
     list-style: none;
@@ -115,4 +113,25 @@ nav ul li a {
     text-decoration: none;
     color: #0033a0;
     font-weight: bold;
+}
+
+/* Estiliza a logo como um botão clicável */
+#logo-button {
+    display: inline-block;
+    cursor: pointer;
+    background-color: transparent;
+    border: none;
+    text-decoration: none; /* Remove a linha de link padrão */
+}
+
+/* Estiliza a imagem da logo */
+#logo-button img {
+    width: 50px; /* Tamanho da logo */
+    height: 50px;
+    transition: transform 0.3s ease;
+}
+
+/* Adiciona uma animação de zoom ao passar o mouse */
+#logo-button:hover img {
+    transform: scale(1.1); /* Aumenta a imagem em 10% */
 }
