--- a/home/styles.css
+++ b/home/styles.css
@@ -40,14 +40,14 @@ nav ul li a {
 /* Carrossel */
 .carousel-container {
     position: relative;
-    max-width: 1000px;
-    margin: 20px auto;
+    max-width: auto;
+    margin: auto;
     overflow: hidden;
 }
 
 .carousel-slide {
     display: flex;
-    transition: transform 0.5s ease-in-out;
+    transition: transform 3s ease-in-out;
     width: 400%;
 }
 
