--- a/home/styles.css
+++ b/home/styles.css
@@ -182,9 +182,51 @@ nav ul li a:hover {
     width: 50px; /* Tamanho da logo */
     height: 50px;
     transition: transform 0.3s ease;
+    
 }
 
 /* Adiciona uma animação de zoom ao passar o mouse */
 #logo-button:hover img {
     transform: scale(1.1); /* Aumenta a imagem em 10% */
+}
+
+
+
+.text-box {
+    padding: 20px;
+    width: 50%;
+}
+
+.text-box h1 {
+    font-size: 2em;
+    color: #333;
+}
+
+.text-box h3 {
+    font-size: 1.2em;
+    color: #666;
+    margin-bottom: 20px;
+}
+
+.text-box p {
+    font-size: 1em;
+    color: #555;
+    margin-bottom: 15px;
+    line-height: 1.6;
+}
+
+.text-box a {
+    color: #0066cc;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.image-box {
+    width: 50%;
+}
+
+.image-box img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
