--- a/Sobre/style.css
+++ b/Sobre/style.css
@@ -99,7 +99,7 @@ h1 {
 }
 
 .logo:hover img {
-    transform: rotate(360deg);
+    transform: translateY(-10%) scale(1.2);
 }
 
 /* Animação para as imagens dos jogadores */
@@ -107,6 +107,4 @@ h1 {
     transition: transform 0.3s ease;
 }
 
-.jogador-btn:hover img {
-    transform: scale(1.1);
-}
+
